@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - 'starting_version' now defaults to the perl prerequisite declared
+            in the distribution, if it exists
 
 0.013     2013-12-14 21:09:08Z
           - now treats dual-lifed modules that did not exist in core at all at
